支持 Java 8，将部分 if 逻辑改为 switch，增加变量引用检测